Sun Jun 22 19:38:04 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am: Albert Chin pointed out that trio.h and
	  triodef.h were missing from the distribution

Fri Jun 13 16:53:33 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in libexslt/Makefile.am libexslt/libexslt.3
	  libxslt/Makefile.am libxslt/libxslt.3: Moved the man pages
	  to section 3
	* libexslt/sets.c: applied patch from Peter Breitenlohner
	* doc/*: rebuilt the docs
	* tests/docbook/result//* tests/xmlspec/*.html: changes in
	  generattion of &quot; as " in element content.

Sun Jun 08 22:57:13 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/transform.c: changed xsltChoose to ignore whitespace 
	  which is a sibling of xsl:when

Sat May 31 17:18:21 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/xslt.c: fixed a possible crash when the document
	  wasn't a proper stylesheet.

Tue May 20 12:14:12 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixes a 64bits cleanliness issue #113318

Sat May 17 13:25:32 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/defgen.xsl: new file, generates the export sources.
	* win32/*.def.src: these are now autogenerated, changes to these
	  will not be logged anymore.

Fri May 16 13:22:31 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-121.*
	  tests/general/Makefile.am tests/general/bug-121*: added the
	  example for bug #112904 in the regression tests, the bug fix is
	  actually in libxml2

Thu May 15 16:26:34 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: fixing portability bug #113002 on HP-UX
	* configure.in libxslt.spec.in python/Makefile.am: cleanup
	  of --with-python like for libxml2

Thu May 15 11:45:00 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltutils.c: fixing bug #112995, a problem with
	  NaN within the sort element. Also added regression test.
