@@ -1,3 +1,8 @@
+Sun Jul  6 00:00:31 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/security.c: fix the write checking code when
+	  the output filename does not parse as an URL bug #115402
+
 Sun Jun 22 19:38:04 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/Makefile.am: Albert Chin pointed out that trio.h and
